# hermes-plugin-zalo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: config.yaml
zalo/: __init__.py  adapter.py  plugin.yaml
